--- a/project-prettify/style.css
+++ b/project-prettify/style.css
@@ -13,6 +13,92 @@ body {
  transition: all 0.3s linear;
 }
 
+.zone:hover {
+ -webkit-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+    -moz-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+    -o-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+    box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+}
+
+/***********************************************************************
+ *  Nav Bar
+ **********************************************************************/
+
+.main-nav {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  font-size: 0.7em;
+}
+
+@media only screen and (max-width: 600px) {
+  .main-nav {
+     font-size: 0.5em;
+     padding: 0;
+  }
+}
+
+.push  {
+  margin-left: auto;
+}
+
+li {
+ padding: 18px;
+}
+
+a { 
+ color: #f5f5f6;
+  text-decoration: none;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+
+/***********************************************************************
+ *  Cover
+ **********************************************************************/
+.container {
+/* show height auto */
+  height: 70vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cover {
+   width:  30rem;
+}
+
+
+/***********************************************************************
+ *  Grid Panel
+ **********************************************************************/
+.grid-panel {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  gird-gap: 20px;
+}
+
+.box {
+    background-color: #444;
+    padding: 130px;
+    margin: 20px;
+}
+
+.box > img {
+    width: 100%;
+}
+
+.box:hover {
+    -webkit-transform: rotate(-7deg);
+    -moz-transform: rotate(-7deg);
+    -o-transform: rotate(-7deg);
+    transform: rotate(-7deg);
+}
 
 .box > img {
   width: 100;
